Diversas alterações necessárias nos códigos para resolver problema de timeout de endpoint
